test/compile_errors/err_ephemeral_enum_payload.w
//! expect-check-fail: ephemeral values cannot be stored in enum payloads

enum BadPayload:
    View(StrView)
    Empty

fn main:
    0
